[package]
name = "advent_of_code2020"
version = "0.1.0"
authors = ["xeno14 <integral14.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.4.2"

[lib]
name = "aoc"
path = "src/lib.rs"

[[bin]]
name = "day1"
src = "src/day1.rs"

[[bin]]
name = "day2"
src = "src/day2.rs"