[package]
name = "advent_of_code2020"
version = "0.1.0"
authors = ["xeno14 <integral14.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.4.2"
counter = "0.5.2"
ndarray = "0.14.0"
itertools = "0.10.0"

[lib]
name = "aoc"
path = "src/lib.rs"

[[bin]]
name = "day1"
src = "src/day1.rs"

[[bin]]
name = "day2"
src = "src/day2.rs"

[[bin]]
name = "day3"
src = "src/day3.rs"

[[bin]]
name = "day4"
src = "src/day4.rs"
test = true

[[bin]]
name = "day5"
src = "src/day5.rs"